--- a/src/index.html
+++ b/src/index.html
@@ -59,24 +59,55 @@
     </div>
     <div class="benefit">
         <div class="container">
-            <div class="benefit__header">НАШИ ПРЕИМУЩЕСТВА</div>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="benefit__icons">
                 <div class="benefit__icon">
                     <img src="icons/cup.png" alt="cup">
-                    <div class="benefit__subheader">Делимся опытом</div>
-                    <div class="benefit__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                    <div class="benefit__subheader">
+                        Делимся опытом
+                    </div>
+                    <div class="benefit__text">
+                        Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
                 </div>
                 <div class="benefit__icon">
                     <img src="icons/heart.png" alt="heart">
-                    <div class="benefit__subheader">Заботимся о здоровье</div>
-                    <div class="benefit__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                    <div class="benefit__subheader">
+                        Заботимся о здоровье
+                    </div>
+                    <div class="benefit__text">
+                        Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                    </div>
                 </div>
                 <div class="benefit__icon">
                     <img src="icons/shoe.png" alt="shoe">
-                    <div class="benefit__subheader">Учим бегать</div>
-                    <div class="benefit__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING</a>.</div>
+                    <div class="benefit__subheader">
+                        Учим бегать
+                    </div>
+                    <div class="benefit__text">
+                        Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - 
+                        <a href="#">I LOVE RUNNING</a>.
+                    </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию<br>
+                по подбору пульсометра 
+            </h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки<br>
+                и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваше E-mail" type="email">
+                <button class="button button_submit">заказать консультацию</button>
+            </form>
         </div>
     </div>
 </body>
